--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,4 +1,6 @@
 $corDeFundo: #040714;
-$corTextoPrincipal: silver;
+$corTextoPrincipal: #c0c0c0;
 $corTextoSecundario: #f9f9f9;
-$corBTN: #6421ff;
+$corBTNPrimario: #6421ff;
+$corBTNSecundario: #0063e5;
+$corBTNDark: #000;
