--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -7,12 +7,27 @@
     background-size: cover;
     text-align: center;
 
+    .button{
+        margin-top: 2vw;
+        margin-bottom: 8px;
+    }
+    @media (max-width:768px){
+        background-image: url(../../dist/images/hero_celular.jpeg);
+        padding-top: calc(50vw + 25px);
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-top: -55px;
+    }
+
     &__content{
         max-width: 640px;
 
         &__branding{
             max-width: 320px;
-            margin: 0 160px;
+            margin: 0 auto;
+            @media (max-width:768px){
+                max-width: 180px;
+            }
         }
 
         .title--small{
@@ -29,9 +44,16 @@
         &__combos{
             display: flex;
             justify-content: space-between;
+            @media (max-width:768px){
+                display: block;
+                margin-bottom: 24px;
+            }
 
             &__combo{
                 width: calc(50% - 24px);
+                @media (max-width:768px){
+                    width: 100%;
+                }
 
                 img{
                     max-height: 60px;
