--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -10,6 +10,13 @@
         justify-content: space-around;
         margin-top: 50px;
 
+        .button{
+            margin-top: 24px;
+        }
+        @media (max-width:768px){
+            display: block;
+            margin-top: 16px;
+        }
         &__item{
             text-align: center;
             padding: 60px 44px 44px;
@@ -24,6 +31,9 @@
 
             img{
                 height: 83px;
+                @media (max-width:768px){
+                    height: 72px;
+                }
             }
             strong{
                 display: block;
@@ -34,5 +44,6 @@
 
     p{
         text-align: center;
+        margin-bottom: 32px;
     }
 }
