--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -8,7 +8,9 @@
         display: none;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
-
+        @media (max-width: 768px){
+            grid-template-columns: 1fr 1fr 
+        }
         &--is-active{
             display: grid;
         }
@@ -25,6 +27,12 @@
         display: flex;
         justify-content: center;
 
+        @media (max-width: 768px){
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
+
         &__button{
             color: variaveis.$corTextoSecundario;
             font-size: 20px;
@@ -35,6 +43,9 @@
             border-bottom: 5px solid transparent;
             &--is-active{
                 border-color: variaveis.$corTextoSecundario;
+            }
+            @media (max-width: 768px){
+                font-size: 16px;
             }
         }
     }
