--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,11 @@
 @use 'hero';
 @use 'shows';
 @use 'plans';
+@use 'available-devices';
+@use 'faq';
+@use 'footer';
+@use 'header';
+
 
 @font-face{
     font-family: Avenir;
@@ -20,7 +25,9 @@
     padding: 0;
     box-sizing: border-box;
     border: none;
+    list-style: none;
     font-family: Avenir, sans-serif;
+    text-decoration: none;
 }
 
 body{
@@ -39,18 +46,31 @@ body{
 }
 .text--big{
     @include text(18px);
+    @media (max-width:768px){
+        @include text(15px);
+    }
 }
 
 .text{
     @include text;
+    @media (max-width:768px){
+        @include text(14px);
+    }
 }
 
 .text--small{
     @include text(12px);
+    @media (max-width:768px){
+        @include text(11px);
+    }
 }
 
 .title--big{
     @include title(44px);
+    @media(max-width:768px){
+        @include title(24px)
+    }
+
 }
 
 .title{
@@ -60,6 +80,10 @@ body{
 .title--small{
     @include title(28px);
     color: variaveis.$corTextoSecundario;
+
+    @media(max-width:768px){
+        @include title(22px)
+    }
 }
 
 .link-text{
@@ -69,15 +93,84 @@ body{
 }
 
 .button{
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 60px;
         font-size: 18px;
         color: variaveis.$corTextoSecundario;
-        background-color: variaveis.$corBTN;
+        background-color: variaveis.$corBTNPrimario;
         text-transform: uppercase;
         border-radius: 7px;
-        margin-top: 2vw;
-        margin-bottom: 8px;
-        border: 1px solid variaveis.$corBTN;   
+        border: 1px solid transparent;
+        padding: 8px 14px;
+        letter-spacing: 1px; 
+        &:hover{
+            background-color: lighten(variaveis.$corBTNPrimario, 3%);
+        }
+
+        &--secondary{
+            background-color: variaveis.$corBTNSecundario;
+            &:hover{
+                background-color: lighten(variaveis.$corBTNSecundario, 3%);
+            }
+        }
+
+        &--dark{
+            background-color: rgba(variaveis.$corBTNDark, 0.8);
+            border-color: variaveis.$corTextoSecundario;
+
+            &:hover{
+                background-color: variaveis.$corTextoSecundario;
+                color: variaveis.$corDeFundo;
+            }
+        }
+}
+
+.image-text-section{
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    @media (max-width: 768px){
+        display: block;
+    }
+
+    img{
+        max-width: 100%;
+    }
+
+    &__text_container{
+        padding: 0 2vw;
+
+        h2{
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width{
+        display: block;
+        position: relative;
+        img{
+            width: 100%;
+        }
+        &__text_container{
+            position: absolute;
+            top: 0;
+            height: 100%;
+            left: 50%;
+            width: calc(50% - 5.6vw);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            @media (max-width: 768px){
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
+        }
+    }
 }
