--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -10,12 +10,12 @@
         &__item{
             background-color: #13151d;
             margin-bottom: 16px;
+            text-align: inherit;
             &__question{
                 padding: 24px;
                 display: block;
                 cursor: pointer;
                 position: relative;
-                display: inline-block;
 
                 &::after{
                     content: '+';
