--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -2,7 +2,9 @@
 
 .footer{
     padding: 26px 8px;
-
+    @media (min-width: 769px) and (max-width: 1023px){
+        padding: 5vw;
+    }
     &__container{
         max-width: 1024px;
         width: 100%;
