--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -17,6 +17,11 @@
             display: block;
             margin-top: 16px;
         }
+        @media (min-width: 769px) and (max-width: 1023px){
+            display: grid;
+            justify-content: center;
+            margin: 0 auto;
+        }
         &__item{
             text-align: center;
             padding: 60px 44px 44px;
@@ -33,6 +38,9 @@
                 height: 83px;
                 @media (max-width:768px){
                     height: 72px;
+                }
+                @media (min-width: 769px) and (max-width: 1023px){
+                    height: 88px;
                 }
             }
             strong{
